--- a/.github/workflow/update_data.yml
+++ b/.github/workflow/update_data.yml
@@ -1,1 +1,37 @@
+name: Daily BTC Distribution Update
 
+on:
+  schedule:
+    - cron: '0 2 * * *'  # 每天 UTC 时间 02:00 (北京时间上午 10:00) 运行
+  workflow_dispatch:     # 允许你在 GitHub 网页上手动点击运行测试
+
+permissions:
+  contents: write        # 允许 Action 推送代码回仓库
+
+jobs:
+  update-data:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r scripts/requirements.txt
+
+      - name: Run Scraper
+        run: python scripts/scraper.py
+
+      - name: Commit and Push changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add data/
+          # 只有当数据有更新时才 commit，避免报错
+          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: 🤖 auto update BTC distribution data" && git push)
